# slstatus

./: .gitignore  config.h  meson.build  meson.options  patch  sdfd.py  slstatus.cpp  slstatus.h  util.cpp
components/: battery.cpp  keyboard_indicators.cpp  netspeeds.cpp
